comment the google translate script across the website

--- a/templates/index.html
+++ b/templates/index.html
@@ -420,9 +420,9 @@
       </section>
       <!-- Blog -->
 
-      <div id="google_translate_element" class="active">
+      <!-- <div id="google_translate_element" class="active">
         {% comment %} <a class="top" id="top" href="#top"><i class="ion-ios-arrow-up"></i></a> {% endcomment %}
-      </div>
+      </div> -->
 
       <!-- Footer -->
       {% include 'footer.html' %}
