--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
     <script src="{% static 'js/custom.js' %}"></script>
 
     <!-- Google Translate Script -->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         function googleTranslateElementInit() {
             new google.translate.TranslateElement(
                 {
@@ -69,7 +69,7 @@
                 'google_translate_element'
             );
         }
-    </script>
+    </script> -->
     {% comment %} <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> {% endcomment %}
 
     <script>
@@ -91,7 +91,7 @@
         }) // Monitoring performance to make your website faster. If you want to opt-out, please contact web hosting support.
     </script>
     <script src='../../../../img1.wsimg.com/signals/js/clients/scc-c2/scc-c2.min.js'></script>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         function googleTranslateElementInit() {
             new google.translate.TranslateElement({
                 pageLanguage: 'en', // Default language of your page
@@ -99,7 +99,7 @@
                 layout: google.translate.TranslateElement.InlineLayout.SIMPLE
             }, 'google_translate_element');
         }
-    </script>
+    </script> -->
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     
 </body>
