--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -180,7 +180,7 @@
                         <li class="menu-item">
                           <a href="{% url 'our-blog' %}">Blog</a>
                         </li>
-                        <li class="menu-item">
+                        <li style="width: 100px;" class="menu-item">
                           <a href="{% url 'contact-us' %}">Contact Us</a>
                         </li>
                         <li class="menu-item">
