--- a/templates/base.html
+++ b/templates/base.html
@@ -100,7 +100,7 @@
             }, 'google_translate_element');
         }
     </script> -->
-    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <!-- <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
     
 </body>
 
