--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -187,8 +187,8 @@
                           <a href="{% url 'admin:index' %}">Login</a>
                         </li>
                         <!-- Google Translate Dropdown -->
-                        <li class="menu-item google-translate-item">
-                          <div id="google_translate_element"></div>
+                        <li class="menu-item google-translate-item ">
+                          <div id="google_translate_element" style="color: black;"></div>
                         </li>
                       </ul>
                     </div>
@@ -235,5 +235,6 @@
             );
         }
     </script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 {% endblock %}
